--- a/PushNotifications/PushNotifications.Android/PushNotifications.Android.csproj
+++ b/PushNotifications/PushNotifications.Android/PushNotifications.Android.csproj
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8BE68195-08AA-44B9-B1E6-1FB810432461}</ProjectGuid>
+    <ProjectGuid>{1A8F12AE-2F66-4E77-98DC-C3146FE43896}</ProjectGuid>
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{c9e5eea5-ca05-42a1-839b-61506e0a37df}</TemplateGuid>
     <OutputType>Library</OutputType>
@@ -54,20 +54,10 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Crosslight.Xamarin.GooglePlayServices.GCM">
-      <Version>42.1001.0</Version>
-    </PackageReference>
-    <PackageReference Include="GMS_SDK">
-      <Version>1.2.2.5</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
-    <PackageReference Include="Xamarin.GooglePlayServices.Gcm">
-      <Version>71.1600.1</Version>
-    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GSMService.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -100,9 +90,9 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PushNotifications\PushNotifications.csproj">
-      <Project>{13C2FE12-FE1A-4221-B16B-9D1FDBA6C8C4}</Project>
+      <Project>{691D410D-3DB3-41C2-8C6A-8502C1F316C8}</Project>
       <Name>PushNotifications</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+ <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
