--- a/PushNotifications/PushNotifications.Android/Properties/AndroidManifest.xml
+++ b/PushNotifications/PushNotifications.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.pushnotifications">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-    <application android:label="PushNotifications.Android"></application>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.pushnotifications" android:installLocation="auto">
+  <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="26" />
+  <application android:label="PushNotifications.Android">
+    <receiver
+android:name="com.google.firebase.iid.FirebaseInstanceIdInternalReceiver"
+android:exported="false">
+    </receiver>
+    <receiver
+        android:name="com.google.firebase.iid.FirebaseInstanceIdReceiver"
+        android:exported="true"
+        android:permission="com.google.android.c2dm.permission.SEND">
+      <intent-filter>
+        <action android:name="com.google.android.c2dm.intent.RECEIVE"></action>
+        <action android:name="com.google.android.c2dm.intent.REGISTRATION"></action>
+        <category android:name="${applicationId}"></category>
+      </intent-filter>
+    </receiver>
+  </application>
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 </manifest>
