--- a/PushNotifications/PushNotifications.Android/Properties/AndroidManifest.xml
+++ b/PushNotifications/PushNotifications.Android/Properties/AndroidManifest.xml
@@ -16,6 +16,12 @@ android:exported="false">
         <category android:name="${applicationId}"></category>
       </intent-filter>
     </receiver>
+
+    <meta-data
+    android:name="com.google.firebase.messaging.default_notification_icon"
+    android:resource="@drawable/icon" />
+
+
   </application>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
